--- a/src/style/semantic/components/progress.css
+++ b/src/style/semantic/components/progress.css
@@ -22,7 +22,7 @@
   box-shadow: none;
   background: rgba(0, 0, 0, 0.1);
   padding: 0em;
-  border-radius: 0.28571429rem;
+  border-radius: 4px;
 }
 .ui.progress:first-child {
   margin: 0em 0em 2.5em;
@@ -45,7 +45,7 @@
   width: 0%;
   min-width: 2em;
   background: #888888;
-  border-radius: 0.28571429rem;
+  border-radius: 4px;
   -webkit-transition: width 0.1s ease, background-color 0.1s ease;
   transition: width 0.1s ease, background-color 0.1s ease;
 }
@@ -76,7 +76,7 @@
   right: auto;
   left: 0%;
   bottom: auto;
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
   font-weight: bold;
   text-shadow: none;
   margin-top: 0.2em;
@@ -118,25 +118,25 @@
 /* Indicating Label */
 .ui.indicating.progress[data-percent^="1"] .label,
 .ui.indicating.progress[data-percent^="2"] .label {
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
 }
 .ui.indicating.progress[data-percent^="3"] .label {
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
 }
 .ui.indicating.progress[data-percent^="4"] .label,
 .ui.indicating.progress[data-percent^="5"] .label {
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
 }
 .ui.indicating.progress[data-percent^="6"] .label {
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
 }
 .ui.indicating.progress[data-percent^="7"] .label,
 .ui.indicating.progress[data-percent^="8"] .label {
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
 }
 .ui.indicating.progress[data-percent^="9"] .label,
 .ui.indicating.progress[data-percent^="100"] .label {
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
 }
 
 /* Single Digits */
@@ -160,7 +160,7 @@
 .ui.indicating.progress[data-percent="7"] .label,
 .ui.indicating.progress[data-percent="8"] .label,
 .ui.indicating.progress[data-percent="9"] .label {
-  color: rgba(0, 0, 0, 0.87);
+  color: #212121;
 }
 
 /* Indicating Success */
@@ -179,7 +179,7 @@
 ---------------*/
 
 .ui.progress.success .bar {
-  background-color: #21BA45 !important;
+  background-color: #4CAF50 !important;
 }
 .ui.progress.success .bar,
 .ui.progress.success .bar::after {
@@ -211,7 +211,7 @@
 ---------------*/
 
 .ui.progress.error .bar {
-  background-color: #DB2828 !important;
+  background-color: #F44336 !important;
 }
 .ui.progress.error .bar,
 .ui.progress.error .bar::after {
@@ -239,7 +239,7 @@
   right: 0px;
   bottom: 0px;
   background: #FFFFFF;
-  border-radius: 0.28571429rem;
+  border-radius: 4px;
   -webkit-animation: progress-active 2s ease infinite;
           animation: progress-active 2s ease infinite;
 }
@@ -295,19 +295,19 @@
   background: #888888;
 }
 .ui.inverted.progress .bar > .progress {
-  color: #F9FAFB;
+  color: #FAFAFA;
 }
 .ui.inverted.progress > .label {
   color: #FFFFFF;
 }
 .ui.inverted.progress.success > .label {
-  color: #21BA45;
+  color: #4CAF50;
 }
 .ui.inverted.progress.warning > .label {
   color: #F2C037;
 }
 .ui.inverted.progress.error > .label {
-  color: #DB2828;
+  color: #F44336;
 }
 
 /*--------------
@@ -328,7 +328,7 @@
   height: 0.2rem;
   padding: 0px;
   overflow: hidden;
-  border-radius: 0em 0em 0.28571429rem 0.28571429rem;
+  border-radius: 0em 0em 4px 4px;
 }
 .ui.progress.attached .bar {
   border-radius: 0em;
@@ -338,7 +338,7 @@
 .ui.progress.top.attached,
 .ui.progress.top.attached .bar {
   top: 0px;
-  border-radius: 0.28571429rem 0.28571429rem 0em 0em;
+  border-radius: 4px 4px 0em 0em;
 }
 .ui.progress.top.attached .bar {
   border-radius: 0em;
@@ -366,26 +366,26 @@
 
 /* Red */
 .ui.red.progress .bar {
-  background-color: #DB2828;
+  background-color: #F44336;
 }
 .ui.red.inverted.progress .bar {
-  background-color: #FF695E;
+  background-color: #FF1744;
 }
 
 /* Orange */
 .ui.orange.progress .bar {
-  background-color: #F2711C;
+  background-color: #FF9800;
 }
 .ui.orange.inverted.progress .bar {
-  background-color: #FF851B;
+  background-color: #FF9100;
 }
 
 /* Yellow */
 .ui.yellow.progress .bar {
-  background-color: #FBBD08;
+  background-color: #FFEB3B;
 }
 .ui.yellow.inverted.progress .bar {
-  background-color: #FFE21F;
+  background-color: #FFEA00;
 }
 
 /* Olive */
@@ -398,26 +398,26 @@
 
 /* Green */
 .ui.green.progress .bar {
-  background-color: #21BA45;
+  background-color: #4CAF50;
 }
 .ui.green.inverted.progress .bar {
-  background-color: #2ECC40;
+  background-color: #00E676;
 }
 
 /* Teal */
 .ui.teal.progress .bar {
-  background-color: #00B5AD;
+  background-color: #1de9b6;
 }
 .ui.teal.inverted.progress .bar {
-  background-color: #6DFFFF;
+  background-color: #1DE9B6;
 }
 
 /* Blue */
 .ui.blue.progress .bar {
-  background-color: #2185D0;
+  background-color: #2196F3;
 }
 .ui.blue.inverted.progress .bar {
-  background-color: #54C8FF;
+  background-color: #2979FF;
 }
 
 /* Violet */
@@ -430,18 +430,18 @@
 
 /* Purple */
 .ui.purple.progress .bar {
-  background-color: #A333C8;
+  background-color: #9C27B0;
 }
 .ui.purple.inverted.progress .bar {
-  background-color: #DC73FF;
+  background-color: #D500F9;
 }
 
 /* Pink */
 .ui.pink.progress .bar {
-  background-color: #E03997;
+  background-color: #E91E63;
 }
 .ui.pink.inverted.progress .bar {
-  background-color: #FF8EDF;
+  background-color: #F50057;
 }
 
 /* Brown */
@@ -454,7 +454,7 @@
 
 /* Grey */
 .ui.grey.progress .bar {
-  background-color: #767676;
+  background-color: #9E9E9E;
 }
 .ui.grey.inverted.progress .bar {
   background-color: #DCDDDE;
@@ -465,7 +465,7 @@
   background-color: #1B1C1D;
 }
 .ui.black.inverted.progress .bar {
-  background-color: #545454;
+  background-color: #333333;
 }
 
 /*--------------
@@ -508,6 +508,35 @@
             Progress
 *******************************/
 
+.ui.progress .bar {
+  background-size: 30px 30px;
+  background-image: -webkit-linear-gradient(315deg, rgba(255, 255, 255, 0.08) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.08) 50%, rgba(255, 255, 255, 0.08) 75%, transparent 75%, transparent);
+  background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.08) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.08) 50%, rgba(255, 255, 255, 0.08) 75%, transparent 75%, transparent);
+}
+.ui.progress.active .bar:after {
+  -webkit-animation: none;
+          animation: none;
+}
+.ui.progress.active .bar {
+  -webkit-animation: progress-striped 3s linear infinite;
+          animation: progress-striped 3s linear infinite;
+}
+@-webkit-keyframes progress-striped {
+  0% {
+    background-position: 0px 0;
+  }
+  100% {
+    background-position: 60px 0;
+  }
+}
+@keyframes progress-striped {
+  0% {
+    background-position: 0px 0;
+  }
+  100% {
+    background-position: 60px 0;
+  }
+}
 
 
 /*******************************
